[TASK] Try to set some source nodes in the local translations
This is a blind try to see whether Crowdin expects this "useless"
XML node to import our original translations.

--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -4,6 +4,7 @@
         <header/>
         <body>
             <trans-unit id="saveConfiguration">
+                <source>Save configuration</source>
                 <target>Enregistrer la configuration</target>
             </trans-unit>
             <trans-unit id="saveCloseConfiguration">
