--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -7,6 +7,7 @@
                 <target>Frucht</target>
             </trans-unit>
             <trans-unit id="tx_testcrowdin_domain_model_fruit.name">
+                <source>Name</source>
                 <target>Name</target>
             </trans-unit>
         </body>
